tests/baselines/reference/optionalProperties02.errors.txt
tests/cases/conformance/types/typeRelationships/comparable/optionalProperties02.ts(7,1): error TS2352: Type '{ a: undefined; }' cannot be converted to type 'Foo'.
  Property 'b' is missing in type '{ a: undefined; }'.


==== tests/cases/conformance/types/typeRelationships/comparable/optionalProperties02.ts (1 errors) ====
    
    interface Foo {
        a?: string;
        b: string;
    }
    
    <Foo>{ a: undefined };
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '{ a: undefined; }' cannot be converted to type 'Foo'.
!!! error TS2352:   Property 'b' is missing in type '{ a: undefined; }'.